fixed grid styling issues on tablet sized devices, added bottom margin to controls div for small sized devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,10 @@ body {
   margin-bottom: 50px;
 }
 
+.controls-div {
+  margin-bottom: 30px;
+}
+
 .red-dot, .recording-dot {
   background: #ff0000; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(left, #ff0000, #990000); /* For Safari 5.1 to 6.0 */
